--- a/style.css
+++ b/style.css
@@ -76,3 +76,45 @@ a:hover{
 .contact-section p:last-child{
     margin-top: 3rem;
 }
+nav{
+    font-family: var(--mono);
+    font-size: 80%;
+    padding: 1rem;
+}
+nav h1 a{
+    font-family: var(--sans);
+}
+nav ul{
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-flow:  row wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+}
+nav a{
+    color: var(--white);
+    text-decoration: none;
+    display: block;
+}
+nav a:hover{
+    color: var(--magenta);
+}
+nav li:first-child{
+    flex-basis: 100%;
+    text-align: center;
+}
+nav [class*="fa-"]{
+    font-size: 150%;
+    color: var(--aqua);
+}
+nav h1 [class*="fa-"]{
+    font-size: 100%;
+    color: var(--aqua);
+}
+nav a:hover,
+nav [class*="fa-"]:hover{
+    color: var(--magenta);
+}
