--- a/style.css
+++ b/style.css
@@ -118,3 +118,41 @@ nav a:hover,
 nav [class*="fa-"]:hover{
     color: var(--magenta);
 }
+.button{
+    background-color: var(--magenta);
+    padding: 0.5rem;
+    border-radius: 5px;
+}
+.button:hover{
+    color: var(--white);
+    background-color: var(--hotmag);
+}
+
+/* media query */
+@media  (min-width: 850px){
+    nav{
+        max-width: 1200px;
+        margin:  0 auto;
+    }
+    nav li:first-child{
+        flex-basis: auto;
+        text-align: left;
+        margin-right: auto;
+    }
+
+
+}
+/* footer styling */
+footer{
+    text-align: center;
+}
+footer ul{
+   list-style-type: none;
+    padding: 0;
+    margin: 2rem 0;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    gap: 3rem;
+    font-size: 3rem;
+}
