--- a/style.css
+++ b/style.css
@@ -41,9 +41,16 @@ a:hover{
     color: var(--hotmag);
     text-decoration: none;
 }
+
+.gradient{
+    background: linear-gradient(90deg, rgba(255,23,228,1) 0%, rgba(134,251,251,1) 100%);
+    height: 2px;
+}
 /* intro styles */
 #intro {
-    padding-bottom: 10rem;
+    padding:  4rem 1rem 10rem 1rem;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
 #intro p {
@@ -71,7 +78,10 @@ a:hover{
     width: 400px;
     text-align: center;
     margin: 0 auto;
-    padding: 3rem;
+    padding: 3rem 0;
+}
+.section-plum{
+    background-color: var(--plum);
 }
 .contact-section p:last-child{
     margin-top: 3rem;
@@ -122,6 +132,9 @@ nav [class*="fa-"]:hover{
     background-color: var(--magenta);
     padding: 0.5rem;
     border-radius: 5px;
+    font-family: var(--mono);
+    text-decoration: none;
+    color: var(--white);
 }
 .button:hover{
     color: var(--white);
@@ -145,6 +158,7 @@ nav [class*="fa-"]:hover{
 /* footer styling */
 footer{
     text-align: center;
+    padding: 4rem 0;
 }
 footer ul{
    list-style-type: none;
@@ -155,4 +169,87 @@ footer ul{
     justify-content: center;
     gap: 3rem;
     font-size: 3rem;
+}
+/* project section */
+.section-blue{
+    background-color: var(--dkblue);
+}
+#projects{
+    padding: 4rem 1rem;
+}
+#projects h2{
+    font-size: 2.5rem;
+    margin-bottom: calc(2.5rem *1.5);
+}
+#projects h3{
+    color: var(--aqua)0;
+}
+#projects h4{
+    font-size: 1rem;
+    font-family: var(--mono);
+    margin: 0;
+}
+.blackbox{
+    background-color: var(--black);
+    padding: 1rem;
+    border-radius: 10px;
+    color: var(--white);
+    font-size: 1rem;
+    line-height: 1.5;
+}
+#projects ul{
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+    gap: 1rem;
+    font-size: 1rem;
+}
+#projects img{
+    margin: 2rem 0 4rem 0;
+    border-left: 1px solid var(--aqua);
+    border-top: 1px solid var(--aqua);
+    border-radius: 25px;
+    padding: 1rem;
+}
+img{
+    width: 100%;
+}
+@media(min-width: 800px){
+    article{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 1rem;
+    }
+    .text{
+        grid-column: 5/11;
+        grid-row: 1/2;
+        order: 2;
+        text-align: right;
+    }
+    #projects{
+        max-width: 1200px;
+        margin: 0 auto;
+    }
+    #projects ul{
+        justify-content: flex-end;
+    }
+    #projects img{
+        grid-row: 1/2;
+        grid-column: 1/6;
+    }
+    #projects .reverse .text{
+        grid-column: 1/7;
+        order: 2;
+        text-align: left;
+    }
+    #projects .reverse img{
+        grid-column: 6/11;
+        grid-row: 1/2;
+    }
+    #projects .reverse  ul{
+        justify-content: flex-start;
+    }
 }
